--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,19 +1,56 @@
 :root {
-  --color: #000;
-  --gray-1: #E3E3E3;
-  --background: #fff;
-}
+  /* GRAYS */
+  --black: #000000;
+  --gray-100: #070707;
+  --gray-200: #0C0C0C;
+  --gray-300: #111111;
+  --gray-400: #191919;
+  --gray-500: #222222;
+  --gray-600: #2E2E2E;
+  --gray-700: #696969;
+  --gray-800: #E6E6E6;
+  --gray-900: #F2F2F2;
+  --white: #FFFFFF;
 
-.dark {
-  --color: #fff;
-  --gray-1: #E3E3E3;
-  --background: #000;
-}
-
-:root {
+  /* SIZES */
   --vh: 100vh;
-
+  --size-1: 0.25rem;
+  --size-2: 0.5rem;
+  --size-3: 0.75rem;
   --size-4: 1rem;
   --size-5: 1.25rem;
   --size-6: 1.5rem;
+  --size-7: 2rem;
+  --size-8: 3rem;
+  --size-9: 4.5rem;
+}
+
+/* LIGHT */
+:root {
+  --background: var(--white);
+  --gray-z-1: var(--gray-900);
+  --gray-z-2: var(--gray-800);
+  --gray-z-3: var(--gray-700);
+  --gray-z-4: var(--gray-600);
+  --gray-z-5: var(--gray-500);
+  --gray-z-6: var(--gray-400);
+  --gray-z-7: var(--gray-300);
+  --gray-z-8: var(--gray-200);
+  --gray-z-9: var(--gray-100);
+  --color: var(--black);
+}
+
+/* DARK */
+.dark {
+  --background: var(--black);
+  --gray-z-1: var(--gray-100);
+  --gray-z-2: var(--gray-200);
+  --gray-z-3: var(--gray-300);
+  --gray-z-4: var(--gray-400);
+  --gray-z-5: var(--gray-500);
+  --gray-z-6: var(--gray-600);
+  --gray-z-7: var(--gray-700);
+  --gray-z-8: var(--gray-800);
+  --gray-z-9: var(--gray-900);
+  --color: var(--white);
 }
