--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,9 +5,9 @@
   --gray-200: #0C0C0C;
   --gray-300: #111111;
   --gray-400: #191919;
-  --gray-500: #222222;
-  --gray-600: #2E2E2E;
-  --gray-700: #696969;
+  --gray-500: #696969;
+  --gray-600: #ADADAD;
+  --gray-700: #D8D8D8;
   --gray-800: #E6E6E6;
   --gray-900: #F2F2F2;
   --white: #FFFFFF;
@@ -23,6 +23,14 @@
   --size-7: 2rem;
   --size-8: 3rem;
   --size-9: 4.5rem;
+
+  /* FONTS */
+  --font-sm: var(--size-3);
+  --letter-spacing-md: 5%;
+  --letter-spacing-lg: 10%;
+
+  /* ANIMATION */
+  --speed: 0.3s;
 }
 
 /* LIGHT */
