Lighter dark mode

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,10 +1,10 @@
 :root {
   /* GRAYS */
   --black: #000000;
-  --gray-100: #070707;
-  --gray-200: #0C0C0C;
-  --gray-300: #111111;
-  --gray-400: #191919;
+  --gray-100: #131313;
+  --gray-200: #1C1C1C;
+  --gray-300: #262626;
+  --gray-400: #2F2F2F;
   --gray-500: #696969;
   --gray-600: #ADADAD;
   --gray-700: #D8D8D8;
