--- a/styles/variables.css
+++ b/styles/variables.css
@@ -36,6 +36,7 @@
   --letter-spacing-md: 0.05em;
   --letter-spacing-lg: 0.1em;
   --line-height-base: var(--size-6);
+  --line-height-md: 120%;
 
   /* ANIMATION */
   --speed-fast: 0.15s;
