--- a/styles/variables.css
+++ b/styles/variables.css
@@ -20,7 +20,7 @@
   /* COLORS */
   --red: #ef4444;
   --error: var(--red);
-  --green: #5bc697;
+  --green: #94E337;
   --success: var(--green);
 
   /* SIZES */
