--- a/styles/scroll.css
+++ b/styles/scroll.css
@@ -1,4 +1,28 @@
 .scroll {
+  --scrollbar-foreground: var(--gray-z-1);
+  --scrollbar-background: var(--gray-z-3);
+  height: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+
+  /* Foreground, Background */
+  scrollbar-color: var(--scrollbar-foreground) var(--scrollbar-background);
+
+  &::-webkit-scrollbar {
+    height: calc(var(--size-0) + var(--size-1)); /* Mostly for horizontal scrollbars */
+    width: calc(var(--size-0) + var(--size-1)); /* Mostly for vertical scrollbars */
+    z-index: 9999;
+    border-left: var(--border);
+  }
+  &::-webkit-scrollbar-thumb { /* Foreground */
+    background: var(--scrollbar-foreground);
+  }
+  &::-webkit-scrollbar-track { /* Background */
+    background: var(--scrollbar-background);
+  }
+
+  > * {
+    border-right: var(--border-dark);
+    width: 100%;
+  }
 }
