--- a/styles/variables.css
+++ b/styles/variables.css
@@ -46,6 +46,7 @@
   --letter-spacing-sm: -0.025em;
   --letter-spacing-md: 0.05em;
   --letter-spacing-lg: 0.1em;
+  --line-height-sm: 100%;
   --line-height-base: var(--size-6);
   --line-height-md: 120%;
 
