--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
   /* GRAYS */
   --black: #000000;
+  --gray-000: #101010;
   --gray-100: #131313;
   --gray-200: #1C1C1C;
   --gray-300: #262626;
@@ -10,6 +11,7 @@
   --gray-700: #D8D8D8;
   --gray-800: #E6E6E6;
   --gray-900: #F2F2F2;
+  --gray-999: #F8F8F8;
   --white: #FFFFFF;
 
   /* SEMI */
@@ -51,6 +53,7 @@
   --line-height-sm: 100%;
   --line-height-base: var(--size-6);
   --line-height-md: 120%;
+  --line-height-lg: 190%;
 
   /* ANIMATION */
   --speed-fast: 0.15s;
@@ -69,6 +72,7 @@
   --border-light: 1px solid var(--gray-z-6);
 
   --shadow: 0 0.1em 0.3em 0 var(--semi-shade);
+  --border-shadow: 0 0 0 1px var(--gray-z-4);
 
   /* BACKGROUNDS */
   --blur: blur(var(--size-1));
@@ -77,6 +81,7 @@
 /* DARK */
 :root {
   --background: var(--black);
+  --gray-z-0: var(--gray-000);
   --gray-z-1: var(--gray-100);
   --gray-z-2: var(--gray-200);
   --gray-z-3: var(--gray-300);
@@ -93,6 +98,7 @@
 /* LIGHT */
 .lightmode {
   --background: var(--white);
+  --gray-z-0: var(--gray-999);
   --gray-z-1: var(--gray-900);
   --gray-z-2: var(--gray-800);
   --gray-z-3: var(--gray-700);
