--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Carbon, Space Mono, Inter, Avenir, Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
   font-size: 16px;
   line-height: var(--line-height-base);
   font-weight: 400;
