--- a/styles/variables.css
+++ b/styles/variables.css
@@ -20,7 +20,7 @@
   --semi-shade: rgba(0, 0, 0, 0.33);
 
   /* COLORS */
-  --red: #ef4444;
+  --red: #EF4444;
   --green: #94E337;
   --yellow: #F2A840;
 
