Add image modal

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,4 +14,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  * {
+    font-weight: var(--font-weight-bold);
+  }
 }
