--- a/styles/variables.css
+++ b/styles/variables.css
@@ -43,6 +43,7 @@
   /* FONTS */
   --font-family-display: 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
   --font-sm: var(--size-3);
+  --font-xs: calc(var(--size-2) + var(--size-1));
   --font-title: min(calc(var(--size-4) + 1vw * 2), var(--size-7));
   --font-display: min(calc(var(--size-6) + 1vw * 2), var(--size-9));
   --font-weight-medium: 500;
