--- a/styles/variables.css
+++ b/styles/variables.css
@@ -47,6 +47,7 @@
   --font-family-display: 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
   --font-sm: var(--size-3);
   --font-xs: calc(var(--size-2) + var(--size-1));
+  --font-lg: min(calc(var(--size-3) + 1vw * 2), var(--size-5));
   --font-title: min(calc(var(--size-4) + 1vw * 2), var(--size-7));
   --font-display: min(calc(var(--size-6) + 1vw * 2), var(--size-9));
   --font-weight-medium: 500;
@@ -69,6 +70,7 @@
   --page-height: calc(var(--100vh) - var(--navbar-height));
   --content-width-wide: 90rem;
   --content-width: 60rem;
+  --content-width-sm: 35rem;
 
   /* BORDERS */
   --border: 1px solid var(--gray-z-4);
