--- a/styles/animation.css
+++ b/styles/animation.css
@@ -1,3 +1,25 @@
+.v-enter-active,
+.v-leave-active {
+  transition: opacity var(--speed) ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+  opacity: 0;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity var(--speed) ease;
+  max-height: 100%;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+  max-height: 0;
+}
+
 @keyframes appear {
   0% {
     opacity: 0;
