Fine tune email form animation

--- a/styles/animation.css
+++ b/styles/animation.css
@@ -10,7 +10,7 @@
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity var(--speed) ease;
+  transition: all var(--speed) ease;
   max-height: 100%;
 }
 
