--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,6 +18,8 @@
   --semi-light: rgba(255, 255, 255, 0.8);
   --semi-dark: rgba(0, 0, 0, 0.8);
   --semi-shade: rgba(0, 0, 0, 0.33);
+  --transparent-white: rgba(255, 255, 255, 0);
+  --transparent-black: rgba(0, 0, 0, 0);
 
   /* COLORS */
   --red: #EF4444;
@@ -50,7 +52,7 @@
   --font-xs: calc(var(--size-2) + var(--size-1));
   --font-lg: min(calc(var(--size-3) + 1vw * 2), var(--size-5));
   --font-title: min(calc(var(--size-4) + 1vw * 2), var(--size-7));
-  --font-display: min(calc(var(--size-6) + 1vw * 2), var(--size-9));
+  --font-display: min(calc(var(--size-7) + 1vw * 2), var(--size-9));
   --font-weight-medium: 500;
   --font-weight-bold: 700;
   --letter-spacing-sm: -0.025em;
@@ -88,6 +90,7 @@
 /* DARK */
 :root {
   --background: var(--black);
+  --transparent-background: var(--transparent-black);
   --gray-z-0: var(--gray-000);
   --gray-z-1: var(--gray-100);
   --gray-z-2: var(--gray-200);
@@ -108,6 +111,7 @@
 /* LIGHT */
 .lightmode {
   --background: var(--white);
+  --transparent-background: var(--transparent-white);
   --gray-z-0: var(--gray-999);
   --gray-z-1: var(--gray-900);
   --gray-z-2: var(--gray-800);
