--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -27,3 +27,10 @@
     display: none;
   }
 }
+
+.meta-separated {
+  > *:not(:last-child):after {
+    content: '·';
+    padding: 0 var(--size-2);
+  }
+}
