--- a/styles/variables.css
+++ b/styles/variables.css
@@ -46,11 +46,13 @@
   --size-9: 4.5rem;
 
   /* FONTS */
+  --font-family-main: Carbon, Space Mono, Inter, Avenir, Helvetica, Arial, sans-serif;
   --font-family-display: 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
   --font-family-opepen: 'OpepenBlockSolid', 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
   --font-sm: var(--size-3);
   --font-xs: calc(var(--size-2) + var(--size-1));
   --font-lg: min(calc(var(--size-3) + 1vw * 2), var(--size-5));
+  --font-xl: min(calc(var(--size-4) + 1vw * 2), var(--size-6));
   --font-title: min(calc(var(--size-4) + 1vw * 2), var(--size-7));
   --font-display: min(calc(var(--size-7) + 1vw * 2), var(--size-9));
   --font-weight-medium: 500;
