--- a/styles/custom-media.css
+++ b/styles/custom-media.css
@@ -1,6 +1,7 @@
 @custom-media --xs (min-width: 24rem);
 @custom-media --sm (min-width: 30rem);
 @custom-media --md (min-width: 45rem);
+@custom-media --content (min-width: 60rem);
 @custom-media --lg (min-width: 66rem);
 @custom-media --xl (min-width: 88rem);
 @custom-media --xxl (min-width: 120rem);
