--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,6 +18,8 @@
   --semi-light: rgba(255, 255, 255, 0.8);
   --semi-dark: rgba(0, 0, 0, 0.8);
   --semi-shade: rgba(0, 0, 0, 0.33);
+  --opaque-white: rgba(255, 255, 255, 0.9);
+  --opaque-black: rgba(0, 0, 0, 0.9);
   --transparent-white: rgba(255, 255, 255, 0);
   --transparent-black: rgba(0, 0, 0, 0);
 
