--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -12,6 +12,5 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/OpepenBlockSolid_02.woff2") format("woff2"),
-    url("/fonts/OpepenBlockSolid_02.woff") format("woff");
+  src: url("/fonts/OpepenBlockSolid.otf") format("opentype");
 }
