--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,4 +1,20 @@
 @font-face {
+  font-display: swap;
+  font-family: 'Space Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/space-mono-v13-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Space Mono Bold';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/space-mono-v13-latin-700.woff2') format('woff2');
+}
+
+@font-face {
   font-family: "Carbon";
   font-style:  normal;
   font-weight: 400;
