Extract connect prerender styles

--- a/styles/base.css
+++ b/styles/base.css
@@ -23,3 +23,27 @@
 body {
   overflow-x: hidden;
 }
+
+#main-connect {
+  white-space: nowrap;
+  flex-shrink: 0;
+
+  .avatar {
+    margin-left: calc(-2 * var(--size-2) - 1px);
+    width: var(--size-7) !important;
+    height: var(--size-7) !important;
+    border-radius: 50%;
+    border-top-left-radius: var(--size-1);
+    border: var(--border);
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    @media (--md) {
+      height: calc(var(--size-7) + var(--size-1)) !important;
+      width: calc(var(--size-7) + var(--size-1)) !important;
+    }
+  }
+}
