--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@
 @import "./base.css";
 @import "./forms.css";
 @import "./animation.css";
+@import "./main-connect.css";
 @import "./breadcrumb.css";
 @import "./scroll.css";
 @import "./states.css";
