--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -28,6 +28,12 @@
   }
 }
 
+.visible-md {
+  @media (--lg) {
+    display: none !important;
+  }
+}
+
 .meta-separated {
   > *:not(:last-child):after {
     content: '·';
