--- a/styles/forms.css
+++ b/styles/forms.css
@@ -60,6 +60,12 @@ select {
     min-height: var(--size-4);
     font-size: var(--font-sm);
   }
+
+  &.simple {
+    background: transparent;
+    border: var(--border-dark);
+    border-radius: var(--size-1);
+  }
 }
 
 select.input {
