--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@
 @import "./animation.css";
 @import "./main-connect.css";
 @import "./breadcrumb.css";
+@import "./secondary-tertiary-navs.css";
 @import "./scroll.css";
 @import "./states.css";
 @import "./walletconnect.css";
