--- a/styles/secondary-tertiary-navs.css
+++ b/styles/secondary-tertiary-navs.css
@@ -9,19 +9,30 @@ nav.tertiary {
   z-index: 100;
 
   > * {
+    max-width: 100%;
     display: flex;
     gap: var(--size-2);
     padding: var(--size-4);
     font-size: var(--size-base);
     white-space: nowrap;
 
+    > span {
+      @media (--md) {
+        max-width: 100%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
+
     .icon {
+      flex-shrink: 0;
       width: var(--size-5);
       height: var(--siez-5);
     }
   }
 
-  > a {
+  > a,
+  > button {
     color: var(--inactive);
     transition: color var(--speed);
 
