--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,12 @@
 @import "./variables.css";
-@import "./fonts.css";
-@import "./normalize.css";
-@import "./utilities.css";
+/* @import "./fonts.css"; */
+/* @import "./utilities.css"; */
 @import "./base.css";
-@import "./forms.css";
-@import "./animation.css";
-@import "./main-connect.css";
-@import "./breadcrumb.css";
-@import "./secondary-tertiary-navs.css";
-@import "./scroll.css";
-@import "./states.css";
-@import "./walletconnect.css";
+/* @import "./forms.css"; */
+/* @import "./animation.css"; */
+/* @import "./main-connect.css"; */
+/* @import "./breadcrumb.css"; */
+/* @import "./secondary-tertiary-navs.css"; */
+/* @import "./scroll.css"; */
+/* @import "./states.css"; */
+/* @import "./walletconnect.css"; */
