Clean up // simplify styles

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,154 +1,6 @@
-:root {
-  /* GRAYS */
-  --black: #000000;
-  --gray-000: #101010;
-  --gray-100: #131313;
-  --gray-200: #1C1C1C;
-  --gray-300: #262626;
-  --gray-400: #2F2F2F;
-  --gray-500: #696969;
-  --gray-600: #ADADAD;
-  --gray-700: #D8D8D8;
-  --gray-800: #E6E6E6;
-  --gray-900: #F2F2F2;
-  --gray-999: #F8F8F8;
-  --white: #FFFFFF;
+@import "./variables/colors.css";
+@import "./variables/borders.css";
+@import "./variables/fonts.css";
+@import "./variables/components.css";
+@import "./variables/animation.css";
 
-  /* SEMI */
-  --semi-light: rgba(255, 255, 255, 0.85);
-  --semi-dark: rgba(0, 0, 0, 0.85);
-  --semi-shade: rgba(0, 0, 0, 0.33);
-  --opaque-white: rgba(255, 255, 255, 0.9);
-  --opaque-black: rgba(0, 0, 0, 0.9);
-  --transparent-white: rgba(255, 255, 255, 0);
-  --transparent-black: rgba(0, 0, 0, 0);
-
-  /* COLORS */
-  --red: #EF4444;
-  --green: #94E337;
-  --yellow: #F2A840;
-
-  --blue-light: #BFDBFE;
-  --blue-dark: #172554;
-  --ayu-dark-bg: #0A0E14;
-
-  --error: var(--red);
-  --success: var(--green);
-
-  /* SIZES */
-  --size-0: 0.125rem;
-  --size-1: 0.25rem;
-  --size-2: 0.5rem;
-  --size-3: 0.75rem;
-  --size-4: 1rem;
-  --size-5: 1.25rem;
-  --size-6: 1.5rem;
-  --size-7: 2rem;
-  --size-8: 3rem;
-  --size-9: 4.5rem;
-
-  --spacer: var(--size-4);
-
-  --sidenav-width: max(13rem, 20vw);
-
-  /* FONTS */
-  --font-family-main: Space Mono Bold, Inter, Helvetica Neue, Avenir, Helvetica, Arial, sans-serif;
-  --font-family-display: 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
-  --font-family-body: 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
-  --font-family-opepen: var(--font-family-main);
-  --font-sm: var(--size-3);
-  --font-xs: calc(var(--size-2) + var(--size-1));
-  --font-lg: min(calc(var(--size-3) + 1vw * 2), var(--size-5));
-  --font-xl: min(calc(var(--size-4) + 1vw * 2), var(--size-6));
-  --font-title: min(calc(var(--size-4) + 1vw * 2), var(--size-7));
-  --font-display: min(calc(var(--size-7) + 1vw * 2), var(--size-9));
-  --font-weight-medium: 500;
-  --font-weight-bold: 700;
-  --letter-spacing-sm: -0.025em;
-  --letter-spacing-md: 0.05em;
-  --letter-spacing-lg: 0.1em;
-  --line-height-sm: 105%;
-  --line-height-base: var(--size-6);
-  --line-height-md: 120%;
-  --line-height-lg: 160%;
-
-  /* ANIMATION */
-  --speed-fast: 0.15s;
-  --speed:      0.3s;
-  --speed-slow: 0.75s;
-  --speed-slower: 1.5s;
-
-  /* COMPONENTS */
-  --navbar-height: calc(var(--size-7) + 2*(var(--size-4)));
-  --page-height: calc(100dvh - var(--navbar-height));
-  --content-width-wide: 90rem;
-  --content-width: 60rem;
-  --content-width-sm: 35rem;
-  --container-padding-x: var(--size-4);
-
-  /* BORDERS */
-  --border: 1px solid var(--gray-z-4);
-  --border-dark: 1px solid var(--gray-z-2);
-  --border-light: 1px solid var(--gray-z-6);
-
-  --shadow: 0 0.1em 0.3em 0 var(--semi-shade);
-  --shadow-lg: 0 0.2em 0.5em 0 var(--semi-shade);
-  --border-shadow: 0 0 0 1px var(--gray-z-4);
-
-  /* BACKGROUNDS */
-  --blur: blur(var(--size-1));
-
-  @media (--lg) {
-    --sidenav-width: max(20rem, 20vw);
-  }
-}
-
-/* DARK */
-:root {
-  --background: var(--black);
-  --transparent-background: var(--transparent-black);
-  --gray-z-0: var(--gray-000);
-  --gray-z-1: var(--gray-100);
-  --gray-z-2: var(--gray-200);
-  --gray-z-3: var(--gray-300);
-  --gray-z-4: var(--gray-400);
-  --gray-z-5: var(--gray-500);
-  --gray-z-6: var(--gray-600);
-  --gray-z-7: var(--gray-700);
-  --gray-z-8: var(--gray-800);
-  --gray-z-9: var(--gray-900);
-  --color: var(--white);
-  --semi: var(--semi-dark);
-  --inactive: var(--gray-z-5);
-
-  --blue-1: var(--blue-light);
-  --blue-9: var(--blue-dark);
-}
-
-/* LIGHT */
-.lightmode {
-  --background: var(--white);
-  --transparent-background: var(--transparent-white);
-  --gray-z-0: var(--gray-999);
-  --gray-z-1: var(--gray-900);
-  --gray-z-2: var(--gray-800);
-  --gray-z-3: var(--gray-700);
-  --gray-z-4: var(--gray-600);
-  --gray-z-5: var(--gray-500);
-  --gray-z-6: var(--gray-400);
-  --gray-z-7: var(--gray-300);
-  --gray-z-8: var(--gray-200);
-  --gray-z-9: var(--gray-100);
-  --color: var(--black);
-  --semi: var(--semi-light);
-
-  --blue-1: var(--blue-dark);
-  --blue-9: var(--blue-light);
-}
-
-/* SCALING */
-@media (--md) {
-  :root {
-    --font-sm: calc(var(--size-3) + var(--size-0));
-  }
-}
