Scope out sidebar design

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,4 +3,5 @@
 @import "./variables/fonts.css";
 @import "./variables/components.css";
 @import "./variables/animation.css";
+@import "./variables/z-index.css";
 
