--- a/styles/variables/fonts.css
+++ b/styles/variables/fonts.css
@@ -28,16 +28,12 @@
 
   /* FAMILIES */
   --font-family: 'Space Grotesk', Inter, Avenir, Helvetica, Arial, sans-serif;
-  --ui-font-family: Carbon, monospace;
   --font-family-display: var(--font-family);
 
   /* SIZES */
-  --font-sm: var(--size-3);
-  --font-xs: calc(var(--size-2) + var(--size-1));
-  --font-lg: min(calc(var(--size-3) + 1vw * 2), var(--size-5));
-  --font-xl: min(calc(var(--size-4) + 1vw * 2), var(--size-6));
-  --font-title: min(calc(var(--size-4) + 1vw * 2), var(--size-7));
-  --font-display: min(calc(var(--size-7) + 1vw * 2), var(--size-9));
+  --font-base: var(--rem);
+  --font-sm: calc(var(--font-base) * 0.85);
+  --font-lg: calc(var(--font-base) * 1.2);
 
   /* WEIGHTS & SPACING */
   --font-weight-medium: 400;
@@ -53,7 +49,10 @@
   --line-height-md: 120%;
   --line-height-lg: 160%;
 
+  /* UI */
+  --ui-font-family: Carbon, monospace;
   --ui-text-transform: uppercase;
+  --ui-font-size:      0.9rem;
 
 }
 
