--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,6 @@
 @import "./variables/colors.css";
 @import "./variables/borders.css";
+@import "./variables/buttons.css";
 @import "./variables/fonts.css";
 @import "./variables/components.css";
 @import "./variables/animation.css";
