--- a/styles/variables/buttons.css
+++ b/styles/variables/buttons.css
@@ -1,10 +1,10 @@
 :root {
 
   --button-border: var(--border);
-  --button-border-radius: 0;
-  --button-background: var(--background);
-  --button-background-highlight: var(--background);
-  --button-border-color-highlight: var(--primary);
+  --button-border-radius: var(--border-radius);
+  --button-background: var(--gray-z-0);
+  --button-background-highlight: var(--gray-z-2);
+  --button-border-color-highlight: var(--gray-z-5);
 
 }
 
