--- a/styles/variables/z-index.css
+++ b/styles/variables/z-index.css
@@ -1,10 +1,11 @@
 :root {
 
-  --z-index-n1:      -1;
-  --z-index-0:        0;
-  --z-index-ui:       2;
-  --z-index-nav:     10;
-  --z-index-dialog: 100;
+  --z-index-n1:            -1;
+  --z-index-0:              0;
+  --z-index-ui:             2;
+  --z-index-nav-overlay:    8;
+  --z-index-nav:           10;
+  --z-index-dialog:       100;
 
 }
 
