Add mobile bottom nav

--- a/styles/variables/fonts.css
+++ b/styles/variables/fonts.css
@@ -32,6 +32,7 @@
 
   /* SIZES */
   --font-base: var(--rem);
+  --font-xs: calc(var(--font-base) * 0.69);
   --font-sm: calc(var(--font-base) * 0.85);
   --font-lg: calc(var(--font-base) * 1.2);
 
