--- a/styles/variables/components.css
+++ b/styles/variables/components.css
@@ -1,6 +1,6 @@
 :root {
 
-  --navbar-height: calc(var(--size-7) + 2*(var(--size-4)));
+  --bottomnav-height: 3.8rem;
 
   --content-width-wide: 90rem;
   --content-width:      60rem;
