--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 @import "./variables.css";
 @import "./base.css";
+@import "./alert.css";
 @import "./buttons.css";
 @import "./prose.css";
 @import "./popover.css";
