--- a/styles/modal.css
+++ b/styles/modal.css
@@ -6,6 +6,14 @@
       margin-bottom: 0;
     }
   }
+
+  &.wide {
+    max-width: min(calc(100vw - 2*var(--size-4)), 40rem);
+  }
+
+  &.extra-wide {
+    max-width: min(calc(100vw - 2*var(--size-4)), calc(100dvh - 4*var(--size-8)));
+  }
 }
 
 body dialog {
