--- a/styles/modal.css
+++ b/styles/modal.css
@@ -23,4 +23,25 @@ body dialog {
   .button {
     width: min-content;
   }
+
+  > .close {
+    width: var(--size-6);
+    height: var(--size-6);
+    border-radius: 50%;
+    background: var(--semi-shade);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background var(--speed);
+
+    .icon {
+      width: var(--size-4);
+      height: var(--size-4);
+    }
+
+    &:--highlight {
+      background: var(--semi);
+      cursor: pointer;
+    }
+  }
 }
