--- a/styles/variables/components.css
+++ b/styles/variables/components.css
@@ -1,5 +1,6 @@
 :root {
 
+  --nav-width: min(24rem, 100vw);
   --top-nav-height: 3rem;
   --top-subnav-height: 2.5rem;
   --top-nav-total-height: calc(var(--top-nav-height) + var(--top-subnav-height));
