--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,4 +1,15 @@
 .button {
+
+  &.small {
+    padding: var(--size-1) var(--size-2);
+    font-size: var(--font-sm);
+    border-radius: var(--border-radius-sm);
+
+    .icon {
+      width: var(--size-4);
+    }
+  }
+
   &.secondary {
     border-color: var(--gray-z-2);
     color: var(--gray-z-6);
