--- a/styles/variables/borders.css
+++ b/styles/variables/borders.css
@@ -1,7 +1,8 @@
 :root {
 
-  --border-color: var(--gray-z-4);
-  --border-color-dark: var(--gray-z-2);
+  --border-color: var(--gray-z-2);
+  --border-color-dark: var(--gray-z-1);
+  --border-color-shade: var(--semi-shade);
 
   --border: var(--border-width) solid var(--border-color);
 
@@ -10,6 +11,6 @@
 
   --shadow: 0 0.1em 0.3em 0 var(--semi-shade);
   --shadow-lg: 0 0.2em 0.5em 0 var(--semi-shade);
-
+  --shadow-border: 0 0 0 1px var(--gray-z-2a);
 }
 
