Improve opt in flow

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,4 +1,9 @@
 .modal {
+  > h1 {
+    @mixin ui-font;
+    font-size: var(--font-base);
+  }
+
   > menu.actions {
     margin: var(--spacer) 0;
 
