--- a/styles/popover.css
+++ b/styles/popover.css
@@ -4,13 +4,18 @@ body [popover] {
   margin: 0;
   top: auto;
   left: auto;
-  top: var(--spacer);
-  right: var(--spacer);
+  top: var(--main-padding-top);
+  right: var(--main-padding-x);
   background: var(--gray-z-0);
   border-radius: var(--border-radius);
+  padding: var(--spacer);
 
   > h1 {
-    text-transform: uppercase;
+    @mixin ui-font;
+  }
+
+  p {
+    font-size: var(--font-sm);
   }
 
   .button {
