Work on static content

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -47,7 +47,11 @@
     }
 
     .icon {
+      color: var(--gray-z-4);
       width: var(--size-4);
+      height: var(--size-4);
+      margin-left: var(--size-2);
+      margin-top: -0.1em;
     }
   }
 
